mod_http_muc_log: Highlight messages directly linked to

--- a/mod_http_muc_log/res/http_muc_log.html
+++ b/mod_http_muc_log/res/http_muc_log.html
@@ -45,6 +45,7 @@ li:hover .time{opacity:1;}
 .button{display:inline-block}
 .button>a{color:white;background-color:orange;border-radius:4px}
 form{text-align:right}
+li:target{outline:1px gray dotted}
 @media (prefers-color-scheme: dark) {
 html{color:#eee}
 body{background-color:#161616}
