mod_debug_omemo: Fix traceback in case of zero devices
Turns out ipairs(nil) in Lua 5.4 does not throw until the first
iterator.

--- a/mod_debug_omemo/view.tpl.html
+++ b/mod_debug_omemo/view.tpl.html
@@ -211,10 +211,10 @@ ol, ul {
 			<th>Access</th>
 		</tr>
 		{omemo.devices%<tr>
-			<td>{idx}</td>
-			<td>{item.status}</td>
-			<td>{item.bundle}</td>
-			<td>{item.access_model}</td>
+			<td>{idx?<i>N/A</i>}</td>
+			<td>{item.status?<i>N/A</i>}</td>
+			<td>{item.bundle?<i>N/A</i>}</td>
+			<td>{item.access_model?<i>N/A</i>}</td>
 		</tr>}
 	</table>
 </div>
