--- a/mod_invites_register_web/html/register.html
+++ b/mod_invites_register_web/html/register.html
@@ -69,7 +69,7 @@
 						<label for="password" class="col-md-4 col-lg-12 col-form-label">Password:</label>
 						<div class="col-md-8 col-lg-12">
 							<input type="password" name="password" class="form-control" aria-describedby="passwordHelp"
-							       autocomplete="new-password"
+							       autocomplete="new-password" required minlength="{password_policy.length}"
 							>
 							<small id="passwordHelp" class="form-text text-muted">Enter a secure password that you do not use anywhere else.</small>
 						</div>
