mod_invites_page: Fix templates including stray inviter name (thanks Menel)
The util.interpolation syntax `{var?placeholder}` appears to have been
intended as an if-not, but this syntax will always return either the
variable or the placeholder-template.

--- a/mod_invites_page/html/invite.html
+++ b/mod_invites_page/html/invite.html
@@ -32,12 +32,9 @@
 							Scan with mobile device
 					</button>
 				</div>
-			
-				{inviter?<p>You have been invited to chat on {site_name} using XMPP,
-				a secure and decentralized messaging network.</p>}
 
-				{inviter&<p>You have been invited to chat with {inviter} on {site_name},
-				part of the XMPP secure and decentralized messaging network.</p>}
+				<p>You have been invited to chat {inviter&with {inviter} }on {site_name},
+				part of the XMPP secure and decentralized messaging network.</p>
 
 				<h5 class="card-title" style="clear:both">Get started</h5>
 
