--- a/mod_invites_page/html/client.html
+++ b/mod_invites_page/html/client.html
@@ -31,12 +31,9 @@
 							Scan with mobile device
 					</button>
 				</div>
-			
-				{inviter?<p>You have been invited to chat on {site_name} using XMPP,
-				a secure and decentralized messaging network.</p>}
 
-				{inviter&<p>You have been invited to chat with {inviter} on {site_name},
-				part of the XMPP secure and decentralized messaging network.</p>}
+				<p>You have been invited to chat {inviter&with {inviter} }on {site_name},
+				part of the XMPP secure and decentralized messaging network.</p>
 
 				<p>You can start chatting right away with {app.name}. Let's get started!</p>
 
