--- a/mod_http_muc_log/res/http_muc_log.html
+++ b/mod_http_muc_log/res/http_muc_log.html
@@ -44,6 +44,7 @@ li:hover .time{opacity:1;}
 .unavailable .verb{color:#c03030;}
 .button{display:inline-block}
 .button>a{color:white;background-color:orange;border-radius:4px}
+.reaction{font-size:smaller;outline:1px solid silver;border-radius:2px}
 form{text-align:right}
 li.edited{display:none}
 li:target{outline:1px gray dotted;display:inherit}
@@ -113,6 +114,7 @@ td{color:#444}
 <b class="nick">{item.nick}</b>
 <em class="verb">{item.verb?}</em>
 <q class="body">{item.edited&<del>}{item.body?}{item.edited&</del> <a href="#{item.edited}">&#9998;</a>}{item.edit& <a href="#{item.edit}">&#9999;</a>}</q>
+{item.reactions%<span class="reaction">{idx} {item}</span>}
 {item.oob.url&<figure><a rel="nofollow" href="{item.oob.url?}"><img style="max-height:9em;max-width:16em" alt="{item.oob.desc?}" src="{item.oob.url?}"/></a><figcaption>{item.oob.desc?}</figcaption></figure>}
 </li>}
 </ol>
